<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F9F9F9"
    android:orientation="vertical"
    tools:context=".navegacion.Home">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtNombreUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/dmsans_18pt_bold"
            android:text="Hola, Rafael"
            android:textColor="@color/color_letras"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtCargo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dmsans_18pt_light"
            android:text="Administrador"
            android:textColor="@color/color_letras"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/txtNombreUsuario"
            app:layout_constraintTop_toBottomOf="@+id/txtNombreUsuario" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/background_oval_main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtNombreUsuario">

            <ImageView
                android:id="@+id/imgPerfil"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_user_login"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvResumen"
            style="@style/Estilos_subtitulosDimensiones"
            android:text="@string/subtitulo1"
            app:layout_constraintStart_toStartOf="@+id/txtNombreUsuario"
            app:layout_constraintTop_toBottomOf="@+id/txtCargo" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="165dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/background_depas_libres"
            android:elevation="4dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/lnLayout3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvResumen">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_departamentos_libres_main" />

            <TextView
                android:id="@+id/txtDepartamentosLibres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/dmsans_18pt_bold"
                android:text="5"
                android:textColor="@color/morado_oscuro"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/dmsans_18pt_regular"
                android:text="@string/tituloDepartamentos"
                android:textAlignment="center"
                android:textColor="@color/morado_oscuro"
                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnLayout2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/background_solicitudes"
            android:elevation="4dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/lnLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="@+id/linearLayout">

            <TextView
                android:id="@+id/txtSolicitudes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/dmsans_18pt_bold"
                android:text="5"
                android:textColor="@color/morado_oscuro"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/dmsans_18pt_regular"
                android:text="Solicitudes"
                android:textAlignment="center"
                android:textColor="@color/morado_oscuro"
                android:textSize="17sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnLayout3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/background_pagos_confs"
            android:elevation="4dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="@+id/linearLayout">

            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:src="@drawable/img_pagos_pendientes" />

            <TextView
                android:id="@+id/txtPagosConfirmar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/dmsans_18pt_bold"
                android:text="10"
                android:textColor="@color/morado_oscuro"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/dmsans_18pt_regular"
                android:text="@string/tituloPagosC"
                android:textAlignment="center"
                android:textColor="@color/morado_oscuro"
                android:textSize="17sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            style="@style/Estilos_subtitulosDimensiones"
            android:layout_marginTop="16dp"
            android:layout_marginStart="12dp"
            android:text="@string/subtitulo2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnMakao"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/background_btn_inicio"
            android:fontFamily="@font/dmsans_18pt_bold"
            android:text="@string/tituloBtnMainMakao"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/btnParque"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnParque"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/background_btn_inicio"
            android:text="@string/tituloBtnMainPID"
            android:textColor="@color/white"
            android:fontFamily="@font/dmsans_18pt_bold"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnMakao"
            app:layout_constraintTop_toTopOf="@+id/btnMakao" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:paddingBottom="50dp">


        </FrameLayout>

    </LinearLayout>
</LinearLayout>