<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F9F9F9"
    android:orientation="vertical"
    tools:context=".navegacion.Departamentos">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/searchView"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="68dp"
            android:background="@drawable/background_edt2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:visibility="gone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="8dp"
                android:layout_marginStart="8dp"
                android:maxLines="1"
                android:layout_marginEnd="16dp"
                android:background="@color/transparente"
                android:textSize="18sp"
                android:inputType="text"
                android:fontFamily="@font/dmsans_18pt_light"
                android:hint="Buscar Departamento"
                android:textColor="@color/black"
                android:textColorHint="@color/hint"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView5"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:visibility="gone"
                android:id="@+id/imageView5"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_buscar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/textView2"
            style="@style/Estilos_subtitulosDimensiones"
            android:text="@string/departamentos"
            app:layout_constraintStart_toStartOf="@+id/searchView"
            app:layout_constraintTop_toBottomOf="@+id/searchView" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnMakaoT2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/background_btn_inicio"
            android:fontFamily="@font/dmsans_18pt_bold"
            android:text="@string/tituloBtnMainMakao"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/btnParqueT2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnParqueT2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/background_btn_inicio"
            android:fontFamily="@font/dmsans_18pt_bold"
            android:text="@string/tituloBtnMainPID"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/searchView"
            app:layout_constraintStart_toEndOf="@+id/btnMakaoT2"
            app:layout_constraintTop_toTopOf="@+id/btnMakaoT2" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:background="#F9F9F9"

        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/btnMakaoT2">

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="vertical"
            android:paddingBottom="63dp">


        </FrameLayout>

    </LinearLayout>


</LinearLayout>